Updated index.html and README.md

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <main>
         <section id="skills">
           <h2>Skills</h2>
-          <p><span>Front-end:</span> HTML, CSS, JavaScript</p>
+          <p><span>Front-end:</span> HTML, CSS, JavaScript, React</p>
           <p><span>Back-end:</span> Python, Django</p>
         </section>
 
@@ -58,6 +58,13 @@
               href="https://github.com/lucchesilorenzo/front-end-projects"
               target="_blank"
               >Discover My Front-end Projects</a
+            >
+          </h4>
+          <h4>
+            <a
+              href="https://github.com/lucchesilorenzo/react-projects"
+              target="_blank"
+              >Discover My React Projects</a
             >
           </h4>
         </section>
