Added new projects

--- a/index.html
+++ b/index.html
@@ -67,6 +67,27 @@
               >Discover My React Projects</a
             >
           </h4>
+          <h4>
+            <a
+              href="https://github.com/lucchesilorenzo/the-energy-bulletin"
+              target="_blank"
+              >The Energy Bulletin</a
+            >
+          </h4>
+          <h4>
+            <a
+              href="https://github.com/lucchesilorenzo/travel-tracker"
+              target="_blank"
+              >Travel Tracker</a
+            >
+          </h4>
+          <h4>
+            <a
+              href="https://github.com/lucchesilorenzo/bank-account-manager"
+              target="_blank"
+              >Bank Account Manager</a
+            >
+          </h4>
         </section>
 
         <section id="curriculum-vitae">
