Add new project: React Pizzeria

--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
               >Bank Account Manager</a
             >
           </h4>
+          <h4>
+            <a
+              href="https://github.com/lucchesilorenzo/react-pizzeria"
+              target="_blank"
+              >React Pizzeria</a
+            >
+          </h4>
         </section>
 
         <section id="curriculum-vitae">
