Add new project: Contact Manager

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
       <main>
         <section id="skills">
           <h2>Skills</h2>
-          <p><span>Front-end:</span> HTML, CSS, JavaScript, React</p>
-          <p><span>Back-end:</span> Python, Django</p>
+          <p>
+            <span>Front-end:</span> HTML, CSS, Tailwind CSS, JavaScript, React
+          </p>
+          <p><span>Back-end:</span> Python, Django, Supabase</p>
         </section>
 
         <section id="works">
@@ -53,20 +55,6 @@
           </h4>
           <hr />
           <h3>Front-end</h3>
-          <h4>
-            <a
-              href="https://github.com/lucchesilorenzo/front-end-projects"
-              target="_blank"
-              >Discover My Front-end Projects</a
-            >
-          </h4>
-          <h4>
-            <a
-              href="https://github.com/lucchesilorenzo/react-projects"
-              target="_blank"
-              >Discover My React Projects</a
-            >
-          </h4>
           <h4>
             <a
               href="https://github.com/lucchesilorenzo/the-energy-bulletin"
@@ -93,6 +81,13 @@
               href="https://github.com/lucchesilorenzo/react-pizzeria"
               target="_blank"
               >React Pizzeria</a
+            >
+          </h4>
+          <h4>
+            <a
+              href="https://github.com/lucchesilorenzo/contact-manager"
+              target="_blank"
+              >Contact Manager</a
             >
           </h4>
         </section>
@@ -142,7 +137,10 @@
         </section>
       </main>
       <footer>
-        <small>&copy; 2024 Lorenzo Lucchesi. All rights reserved.</small>
+        <small
+          >&copy; <span id="year"></span> Lorenzo Lucchesi. All rights
+          reserved.</small
+        >
       </footer>
     </div>
 
