Add new project: E-Commerce Management API

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
           <p>
             <span>Front-end:</span> HTML, CSS, Tailwind CSS, JavaScript, React
           </p>
-          <p><span>Back-end:</span> Python, Django, Supabase</p>
+          <p>
+            <span>Back-end:</span> Node.js, Express, MongoDB, Python, Django,
+            Supabase
+          </p>
         </section>
 
         <section id="works">
@@ -51,6 +54,13 @@
               href="https://github.com/lucchesilorenzo/watchwise"
               target="_blank"
               >WatchWise - Media Tracker</a
+            >
+          </h4>
+          <h4>
+            <a
+              href="https://github.com/lucchesilorenzo/contact-manager"
+              target="_blank"
+              >Contact Manager</a
             >
           </h4>
           <hr />
@@ -83,11 +93,13 @@
               >React Pizzeria</a
             >
           </h4>
+          <hr />
+          <h3>Back-end</h3>
           <h4>
             <a
-              href="https://github.com/lucchesilorenzo/contact-manager"
+              href="https://github.com/lucchesilorenzo/e-commerce-management-api"
               target="_blank"
-              >Contact Manager</a
+              >E-Commerce Management API</a
             >
           </h4>
         </section>
